force-app/main/default/objects/Pop__c/Pop__c.object-meta.xml
<CustomObject>
    <label>Pop</label>
    <pluralLabel>Pops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Pop Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>