force-app/main/default/objects/Pop__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>