force-app/main/default/objects/Pop__c/fields/Con__c.field-meta.xml
<CustomField>
    <fullName>Con__c</fullName>
    <label>Con</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>