force-app/main/default/objects/Pop__c/fields/Con_factor__c.field-meta.xml
<CustomField>
    <fullName>Con_factor__c</fullName>
    <label>Con factor</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>