force-app/main/default/objects/Pop__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <label>Converted</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>