force-app/main/default/objects/Pop__c/fields/Current_producing__c.field-meta.xml
<CustomField>
    <fullName>Current_producing__c</fullName>
    <label>Current producing</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>