force-app/main/default/objects/Pop__c/fields/Demoted__c.field-meta.xml
<CustomField>
    <fullName>Demoted__c</fullName>
    <label>Demoted</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>