force-app/main/default/objects/Pop__c/fields/Ideology__c.field-meta.xml
<CustomField>
    <fullName>Ideology__c</fullName>
    <label>Ideology</label>
    <type>Lookup</type>
    <referenceTo>Ideology__c</referenceTo>
    <relationshipName>Pop_Ideology</relationshipName>
</CustomField>