force-app/main/default/objects/Pop__c/fields/Ideology_Key__c.field-meta.xml
<CustomField>
    <fullName>Ideology_Key__c</fullName>
    <label>Ideology Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>