force-app/main/default/objects/Pop__c/fields/Ideology_Value__c.field-meta.xml
<CustomField>
    <fullName>Ideology_Value__c</fullName>
    <label>Ideology Value</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>