force-app/main/default/objects/Pop__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <label>Issue Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>