force-app/main/default/objects/Pop__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>Lookup</type>
    <referenceTo>Issues__c</referenceTo>
    <relationshipName>Pop_Issues</relationshipName>
</CustomField>