force-app/main/default/objects/Pop__c/fields/Leftover__c.field-meta.xml
<CustomField>
    <fullName>Leftover__c</fullName>
    <label>Leftover</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>