force-app/main/default/objects/Pop__c/fields/Literacy__c.field-meta.xml
<CustomField>
    <fullName>Literacy__c</fullName>
    <label>Literacy</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>