force-app/main/default/objects/Pop__c/fields/Luxury_needs__c.field-meta.xml
<CustomField>
    <fullName>Luxury_needs__c</fullName>
    <label>Luxury needs</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>