force-app/main/default/objects/Pop__c/fields/Mil__c.field-meta.xml
<CustomField>
    <fullName>Mil__c</fullName>
    <label>Mil</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>