force-app/main/default/objects/Pop__c/fields/Native_american_minor__c.field-meta.xml
<CustomField>
    <fullName>Native_american_minor__c</fullName>
    <label>Native american minor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>