force-app/main/default/objects/Pop__c/fields/Needs_cost__c.field-meta.xml
<CustomField>
    <fullName>Needs_cost__c</fullName>
    <label>Needs cost</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>