force-app/main/default/objects/Pop__c/fields/Percent_afforded__c.field-meta.xml
<CustomField>
    <fullName>Percent_afforded__c</fullName>
    <label>Percent afforded</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>