force-app/main/default/objects/Pop__c/fields/Percent_sold_export__c.field-meta.xml
<CustomField>
    <fullName>Percent_sold_export__c</fullName>
    <label>Percent sold export</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>