force-app/main/default/objects/Pop__c/fields/Pop_Type__c.field-meta.xml
<CustomField>
    <fullName>Pop_Type__c</fullName>
    <label>Pop Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>