force-app/main/default/objects/Pop__c/fields/Production_income__c.field-meta.xml
<CustomField>
    <fullName>Production_income__c</fullName>
    <label>Production income</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>