force-app/main/default/objects/Pop__c/fields/Production_type__c.field-meta.xml
<CustomField>
    <fullName>Production_type__c</fullName>
    <label>Production type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>