force-app/main/default/objects/Pop__c/fields/Promoted__c.field-meta.xml
<CustomField>
    <fullName>Promoted__c</fullName>
    <label>Promoted</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>