force-app/main/default/objects/Pop__c/fields/Random__c.field-meta.xml
<CustomField>
    <fullName>Random__c</fullName>
    <label>Random</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>