force-app/main/default/objects/Pop__c/fields/Russian__c.field-meta.xml
<CustomField>
    <fullName>Russian__c</fullName>
    <label>Russian</label>
    <type>Text</type>
    <length>255</length>
</CustomField>