force-app/main/default/objects/Pop__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>