force-app/main/default/objects/Pop__c/fields/Throttle__c.field-meta.xml
<CustomField>
    <fullName>Throttle__c</fullName>
    <label>Throttle</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>